--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
+<!--
 <h1>{{title}}</h1>
 <hr>
 <p>Bienvenidos a Angular</p>
 <app-counter></app-counter>
 <app-heroes-hero></app-heroes-hero>
 <app-heroes-list></app-heroes-list>
+-->
+<app-dbz-main-page></app-dbz-main-page>
