--- a/src/app/dbz/components/list/list.component.html
+++ b/src/app/dbz/components/list/list.component.html
@@ -9,24 +9,32 @@
     let isOdd = odd;
     "
 
-    class="list-group-item"
+    class="list-group-item d-flex justify-content-between align-items-center"
     [ngClass]="{
       'list-group-item-dark':isLast,
       'list-group-item-primary':isEven
     }">
 
-    <span class="text-primary">{{i}}.- </span>
-    <span>{{character.name}} - </span>
-    <strong>Power: </strong>
-    <span>{{character.power}} </span>
+    <div>
 
-    <span>Es el primero: {{isFirst}} </span>
+      <span class="text-primary">{{i}}.- </span>
+      <span>{{character.name}} - </span>
+      <strong>Power: </strong>
+      <span>{{character.power}} </span>
 
-    <span>Es el ultimo: {{isLast}}</span>
+      <!--
+      <span>Es el primero: {{isFirst}} </span>
 
-    <span> Es par: {{isEven}} </span>
+      <span>Es el ultimo: {{isLast}}</span>
 
-    <span> Es impar: {{isOdd}} </span>
+      <span> Es par: {{isEven}} </span>
+
+      <span> Es impar: {{isOdd}} </span>
+      -->
+
+    </div>
+
+    <button (click)="onDeleteCharacter(i)" class="btn btn-danger">X</button>
 
   </li>
 </ul>
