--- a/src/app/dbz/pages/main-page.component.html
+++ b/src/app/dbz/pages/main-page.component.html
@@ -3,11 +3,12 @@
 
 <div class="row">
   <div class="col">
-    <dbz-list [characterList]="characters"></dbz-list>
+    <!--RECIBIR EVENTO ON DELETE-->
+    <dbz-list (onDelete)="dbzService.onDeleteCharacter($event)" [characterList]="dbzService.characters"></dbz-list>
   </div>
 
   <div class="col">
-     <dbz-add-character></dbz-add-character>
+     <dbz-add-character (onNewCharacter)="dbzService.onNewCharacter($event)"></dbz-add-character>
   </div>
 
 </div>
