--- a/src/app/dbz/components/list/list.component.html
+++ b/src/app/dbz/components/list/list.component.html
@@ -34,7 +34,7 @@
 
     </div>
 
-    <button (click)="onDeleteCharacter(i)" class="btn btn-danger">X</button>
+    <button (click)="onDeleteCharacter(character.id)" class="btn btn-danger">X</button>
 
   </li>
 </ul>
