--- a/src/app/dbz/pages/main-page.component.html
+++ b/src/app/dbz/pages/main-page.component.html
@@ -4,11 +4,11 @@
 <div class="row">
   <div class="col">
     <!--RECIBIR EVENTO ON DELETE-->
-    <dbz-list (onDelete)="dbzService.onDeleteCharacter($event)" [characterList]="dbzService.characters"></dbz-list>
+    <dbz-list (onDelete)="onDeleteCharacter($event)" [characterList]="characters"></dbz-list>
   </div>
 
   <div class="col">
-     <dbz-add-character (onNewCharacter)="dbzService.onNewCharacter($event)"></dbz-add-character>
+     <dbz-add-character (onNewCharacter)="onNewCharacter($event)"></dbz-add-character>
   </div>
 
 </div>
